--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,29 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+<!-- <div class="ion-page" id="main-content">
+  <ion-header>
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-buttons slot="start">
+        <ion-menu-button></ion-menu-button>
+      </ion-buttons>
+      <ion-title>Home</ion-title>
     </ion-toolbar>
   </ion-header>
+  <ion-content></ion-content> -->
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
-</ion-content>
+<!-- <ion-footer> -->
+<!-- <ion-toolbar> -->
+<ion-tabs>
+  <ion-tab-bar slot="bottom">
+    <ion-tab-button tab="memos">
+      <ion-icon name="reader" aria-hidden="true"></ion-icon>
+      <ion-label>All</ion-label>
+    </ion-tab-button>
+    <ion-tab-button tab="favorites">
+      <ion-icon name="heart-circle" aria-hidden="true"></ion-icon>
+      <ion-label>Favorites</ion-label>
+    </ion-tab-button>
+  </ion-tab-bar>
+</ion-tabs>
+<!-- </ion-toolbar> -->
+<!-- </ion-footer> -->
+<!-- <ion-router-outlet></ion-router-outlet> -->
+<!-- </div> -->
